--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </p>
         <hr>
         <br>
-        <p>These are all the reason why aayushi is pagal</p>
+       <hr2> these are all the reson aayushi is pagal<hr2>
     </body>
 
     
